--- a/app/modules/Xp/_Xp.scss
+++ b/app/modules/Xp/_Xp.scss
@@ -26,6 +26,13 @@
     column-gap: 30px;
   }
 
+  @include media("≥H") {
+    max-width: 720px;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+  }
+
   p {
     margin: 0;
     line-height: 2;
